Remove illegal-access=deny